Update keys on guests.html

--- a/templates/guests.html
+++ b/templates/guests.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     {% for guest in guests %}
-        {{ guest.fname }}<br>
-        {{ guest.lname }}<br>
+        {{ guest.guest_fname }}<br>
+        {{ guest.guest_lname }}<br>
         {{ guest.attending_pre_meet }}<br>
         {{ guest.attending_wedding }}<br>
     {% endfor %}
