--- a/templates/guests.html
+++ b/templates/guests.html
@@ -1,17 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>wedding rsvp</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block content %}
+    <h2>I'm another heading</h2>
+
     {% for guest in guests %}
         {{ guest.guest_fname }}<br>
         {{ guest.guest_lname }}<br>
         {{ guest.attending_pre_meet }}<br>
         {{ guest.attending_wedding }}<br>
     {% endfor %}
-</body>
-</html>
+
+{% endblock %}
