--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,58 @@
 </head>
 <body>
 
+    <header>
+                <!--Navbar -->
+        <nav class="mb-1 navbar navbar-expand-lg navbar-dark default-color-dark">
+            <a class="navbar-brand" href="/"><i class="fas fa-heart"></i></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-333"
+            aria-controls="navbarSupportedContent-333" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent-333">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                <a class="nav-link" href="#">Dates</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="#">Info</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Wedding Party</a>
+                    </li>
+                <li class="nav-item dropdown">
+                <a id="demo-dropdown" class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-333" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false">Demo
+                </a>
+                <div class="dropdown-menu dropdown-default" aria-labelledby="navbarDropdownMenuLink-333">
+                    <a class="dropdown-item" href="#">Custom 404 error</a>
+                    <a class="dropdown-item" href="#">Custom 500 error</a>
+                </div>
+                </li>
+            </ul>
+            <ul class="navbar-nav ml-auto nav-flex-icons">
+                <li class="nav-item">
+                <a class="nav-link waves-effect waves-light">
+                    <button type="button" class="btn btn-warning btn-sm text-shadow">RSVP</button>
+                </a>
+                </li>
+                <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-333" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false">
+                    <i class="fas fa-user"></i>
+                </a>
+                <div class="dropdown-menu dropdown-menu-right dropdown-default"
+                    aria-labelledby="navbarDropdownMenuLink-333">
+                    <a class="dropdown-item" href="{{ url_for('get_users') }}">Log In</a>
+                    <a class="dropdown-item" href="#">Another action</a>
+                </div>
+                </li>
+            </ul>
+            </div>
+        </nav>
+        <!--/.Navbar -->
+    </header>
+
     {% block content %}
     {% endblock %}
 
