--- a/templates/login.html
+++ b/templates/login.html
@@ -1,38 +1,39 @@
 {% extends "base.html" %}
 {% block content %}
         <!-- Default form login -->
-    <form class="text-center border border-light p-5" action="#!">
+    <div class="row"></div>
+        <form class="col-md-8 mx-auto text-center border border-light p-5" action="#!">
 
-        <p class="h4 mb-4">Sign in</p>
+            <p class="h4 mb-4">Log in to edit your RSVP</p>
 
-        <!-- Email -->
-        <input type="email" id="defaultLoginFormEmail" class="form-control mb-4" placeholder="E-mail">
+            <!-- Email -->
+            <input type="email" id="defaultLoginFormEmail" class="form-control mb-4" placeholder="E-mail">
 
-        <!-- Password -->
-        <input type="password" id="defaultLoginFormPassword" class="form-control mb-4" placeholder="Password">
+            <!-- Password -->
+            <input type="password" id="defaultLoginFormPassword" class="form-control mb-4" placeholder="Password">
 
-        <div class="d-flex justify-content-around">
-            <div>
-                <!-- Remember me -->
-                <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="defaultLoginFormRemember">
-                    <label class="custom-control-label" for="defaultLoginFormRemember">Remember me</label>
+            <div class="d-flex justify-content-around">
+                <div>
+                    <!-- Remember me -->
+                    <div class="custom-control custom-checkbox">
+                        <input type="checkbox" class="custom-control-input" id="defaultLoginFormRemember">
+                        <label class="custom-control-label" for="defaultLoginFormRemember">Remember me</label>
+                    </div>
+                </div>
+                <div>
+                    <!-- Forgot password -->
+                    <a href="">Forgot password?</a>
                 </div>
             </div>
-            <div>
-                <!-- Forgot password -->
-                <a href="">Forgot password?</a>
-            </div>
-        </div>
 
-        <!-- Sign in button -->
-        <button class="btn btn-info btn-block my-4" type="submit">Sign in</button>
+            <!-- Sign in button -->
+            <button class="btn btn-info my-4" type="submit">Log in</button>
 
-        <!-- Register -->
-        <p>
-            Not got an account yet? <a href="{{ url_for('get_rsvp') }}">RSVP</a> to create one.
-        </p>
+            <!-- Register -->
+            <p>
+                Not got an account yet? <a href="{{ url_for('get_rsvp') }}">RSVP</a> to create one.
+            </p>
 
-    </form>
-
+        </form>
+    </div>
 {% endblock %}
