--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,3 +5,8 @@
 .text-shadow {
   text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5) ;
 }
+
+#create-rsvp-button {
+  background-color: #7b9788;
+  color: #fff
+}
