--- a/templates/base.html
+++ b/templates/base.html
@@ -51,7 +51,7 @@
                 </ul>
                 <ul class="navbar-nav ml-auto nav-flex-icons">
                     <li class="nav-item">
-                    <a class="nav-link waves-effect waves-light" href="{{ url_for('get_rsvp') }}">
+                    <a class="nav-link waves-effect waves-light" href="{{ url_for('create_rsvp_account') }}">
                         <button type="button" class="btn btn-warning btn-sm text-shadow">RSVP</button>
                     </a>
                     </li>
@@ -72,8 +72,22 @@
         </nav>
     </header>
 
-    {% block content %}
-    {% endblock %}
+    <section>
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                {% for message in messages %}
+                    <div class="row flashes">
+                        <h4>{{ message }}</h4>
+                    </div>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
+    </section>
+
+    <main class="container">
+        {% block content %}
+        {% endblock %}
+    </main>
 
     <!-- JQuery -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
