--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
 
     <header>
                 <!--Navbar -->
-        <nav class="mb-1 navbar navbar-expand-lg navbar-dark default-color-dark">
+        <nav class="mb-1 navbar navbar-expand-lg navbar-dark text-shadow">
             <a class="navbar-brand" href="/"><i class="fas fa-heart"></i></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-333"
             aria-controls="navbarSupportedContent-333" aria-expanded="false" aria-label="Toggle navigation">
@@ -84,7 +84,7 @@
         {% endwith %}
     </section>
 
-    <main class="container">
+    <main>
         {% block content %}
         {% endblock %}
     </main>
