--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,118 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h1>I'm the home page</h1>
+    <!-- Jumbotron -->
+    <section class="card card-image hero-image">
+        <div class="text-white text-center py-5 px-4">
+            <div class="py-5">
+        
+                <!-- Content -->
+                <h2 class="card-title h2 my-4 py-2">We're getting married!</h2>
+                <p class="mb-4 pb-2 px-md-5 mx-md-5">
+                    And we'd love you to be a part of it.
+                </p>
+                <a class="btn peach-gradient">Dates & Info</a>
+                <a class="btn peach-gradient">RSVP</a>
+    
+            </div>
+        </div>
+    </section>
+
+    <!-- Dates  -->
+    <section class="container">
+        <div class="row justify-content-center">
+            <div class="col-12">
+                <h2 class="header">Dates</h2>
+            </div>
+            <div class="hr-short"></div>
+        </div>
+        <div class="row">
+            <div class="col-md-6 col-sm-12 two-column">
+                <h3>7 May 2022</h3>
+                <h5>
+                    Pre-meet, 1pm - 5pm
+                </h5>
+                <p>
+                    Instead of a stag do and a hen party, we're inviting our family and friends to come together 
+                    before the big day for a relaxed informal picnic.
+                </p>
+            </div>
+            <div class="col-md-6 col-sm-12 two-column">
+                <h3>21 May 2022</h3>
+                <h5>
+                    Wedding Day, 2pm - Midnight
+                </h5>
+                <p>
+                    The ceremony will take place at Cardiff City Hall before we head over to the restaurant for dinner. 
+                    Drinks and dancing at Porter's bar will follow until the end of the night.
+                </p>
+            </div>
+        </div>
+        <div class="row center-align">
+            <div class="col-12">
+                <a class="btn peach-gradient">More info</a>
+            </div>
+        </div>
+    </section>
+    
+    <!-- Info  --> 
+
+    <section class="container">
+        <div class="row justify-content-center">
+            <div class="col-12">
+                <h2 class="header">Info</h2>
+            </div>
+            <div class="hr-short"></div>
+            <div class="col-12">
+                <i class="fas fa-map-marker-alt"></i>
+                <h4>Pre-meet</h4>
+                <p>The Secret Garden, North Rd CF10 3ER</p>
+                <h4>Wedding</h4>
+                <p>City Hall, Cathays Park, CF10 3ND</p>
+            </div>
+            <div class="hr-short justify-content-center"></div>
+            <div class="col-12">
+                <i class="fas fa-bed"></i>
+                <h4>Wedding</h4>
+                <p>Hilton Cardiff, Kingsway, Greyfriars Rd CF10 3HH</p>
+            </div>
+            <div class="hr-short justify-content-center"></div>
+            <div class="col-12">
+                <i class="fas fa-gift"></i>
+                <p>Your presence is the greatest gift of all! However, should you wish 
+                    to help us celebrate with a gift, we ask that you contribute to our 
+                    <a href="https://www.honeyfund.com/wedding/allen-day-09-14-2021">Honeyfund</a>.
+                </p>
+            </div>
+            <div class="col-md-6 col-sm-12">
+                <a class="btn peach-gradient">Meet the Wedding Party</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- What are you waiting for?  --> 
+
+    <section class="container">
+        <div class="row justify-content-center">
+            <div class="col-12">
+                <h2 class="header">What are you waiting for?</h2>
+            </div>
+            <div class="hr-short"></div>
+            <div class="col-12">
+                <p>
+                    Hopefully this covers everything you need to know about our big day - and hopefully you can make it! 
+                    Hit the RSVP button to let us know yours and your group or plus one's attendance and food choices. 
+                    We know life isn't always simple so if things change for you, you'll be able to amend your RSVP and 
+                    food choices right up until 3 weeks before the wedding day. 
+                </p>
+                <p>
+                    We can't wait to see you!
+                </p>
+            </div>
+            <div class="col-md-6 col-sm-12">
+                <a class="btn peach-gradient">RSVP now!</a>
+            </div>
+        </div>
+    </section>
 
 {% endblock %}
