--- a/templates/login.html
+++ b/templates/login.html
@@ -31,7 +31,7 @@
 
             <!-- Register -->
             <p>
-                Not got an account yet? <a href="{{ url_for('get_rsvp') }}">RSVP</a> to create one.
+                Not got an account yet? <a href="{{ url_for('create_rsvp_account') }}">RSVP</a> to create one.
             </p>
 
         </form>
