Add post method to register form to fix form functionality

--- a/templates/index.html
+++ b/templates/index.html
@@ -68,7 +68,7 @@
                 <h4>Pre-meet</h4>
                 <p>The Secret Garden, North Rd CF10 3ER</p>
                 <h4>Wedding</h4>
-                <p>City Hall, Cathays Park, CF10 3ND</p>
+                <p>City Hall, Cathays Park CF10 3ND</p>
             </div>
             <div class="hr-short justify-content-center"></div>
             <div class="col-12">
@@ -85,7 +85,7 @@
                 </p>
             </div>
             <div class="col-md-6 col-sm-12">
-                <a class="btn peach-gradient">Meet the Wedding Party</a>
+                <a class="btn peach-gradient" href="#">Meet the Wedding Party</a>
             </div>
         </div>
     </section>
@@ -110,7 +110,7 @@
                 </p>
             </div>
             <div class="col-md-6 col-sm-12">
-                <a class="btn peach-gradient">RSVP now!</a>
+                <a class="btn peach-gradient" href="{{ url_for('create_account') }}">RSVP now!</a>
             </div>
         </div>
     </section>
