--- a/templates/register.html
+++ b/templates/register.html
@@ -2,7 +2,7 @@
 {% block content %}
 
     <div class="row">
-        <form class="col-md-8 mx-auto text-center border border-light p-5" action="#!">
+        <form class="col-md-8 mx-auto text-center border border-light p-5" method="POST">
             <div class="card-panel">
 
                 <p class="h4 mb-4">Create an account to register your RSVP</p>
