--- a/templates/users.html
+++ b/templates/users.html
@@ -2,7 +2,8 @@
 {% block content %}
 
     {% for user in users %}
-        {{ user.username }}<br>
+        {{ users.email }}<br>
+        {{ users.password }}<br>
     {% endfor %}
 
 {% endblock %}
