--- a/static/css/style.css
+++ b/static/css/style.css
@@ -25,7 +25,8 @@ body {
 }
 
 .text-shadow {
-  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5) ;
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 
+  0.5) ;
 }
 
 p {
