--- a/templates/base.html
+++ b/templates/base.html
@@ -31,10 +31,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent-333">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                    <a class="nav-link" href="#">Dates</a>
+                    <a class="nav-link" href="{{ url_for('get_user') }}">Dates</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="#">Info</a>
+                    <a class="nav-link" href="/#info">Info</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Wedding Party</a>
@@ -51,7 +51,7 @@
                 </ul>
                 <ul class="navbar-nav ml-auto nav-flex-icons">
                     <li class="nav-item">
-                    <a class="nav-link waves-effect waves-light" href="{{ url_for('create_rsvp_account') }}">
+                    <a class="nav-link waves-effect waves-light" href="{{ url_for('create_account') }}">
                         <button type="button" class="btn btn-warning btn-sm text-shadow">RSVP</button>
                     </a>
                     </li>
@@ -63,7 +63,6 @@
                     <div class="dropdown-menu dropdown-menu-right dropdown-default"
                         aria-labelledby="navbarDropdownMenuLink-333">
                         <a class="dropdown-item" href="{{ url_for('get_login') }}">Log In</a>
-                        <a class="dropdown-item" href="#">Another action</a>
                     </div>
                     </li>
                 </ul>
