--- a/templates/register.html
+++ b/templates/register.html
@@ -2,7 +2,7 @@
 {% block content %}
 
     <div class="row">
-        <form class="col-md-8 mx-auto text-center border border-light p-5" method="POST">
+        <form class="col-md-8 mx-auto text-center border border-light p-5" method="POST" action="{{ url_for('create_account') }}">
             <div class="card-panel">
 
                 <p class="h4 mb-4">Create an account to register your RSVP</p>
@@ -10,13 +10,16 @@
                 <p>Attending as a group? You can RSVP for them too. Let us know who's attending by creating an account
                     below.</p>
 
+                <!-- Name -->
+                <input type="name" name="name" id="create-account-name" class="form-control mb-4" placeholder="name" required>
+
                 <!-- E-mail -->
-                <input type="email" name="email" id="rsvp-form-email" class="form-control mb-4 validate" placeholder="E-mail" required>
+                <input type="email" name="email" id="create-account-email" class="form-control mb-4 validate" placeholder="E-mail" required>
 
                 <!-- Password -->
-                <input type="password" name="password" id="rsvp-form-password" class="form-control validate" minlength="8" maxlength="20" pattern="^[a-zA-Z0-9]{8,20}$" placeholder="Password"
-                    aria-describedby="RSVPFormPasswordHelpBlock" required>
-                <small id="rsvp-form-password-help-block" class="form-text text-muted mb-4">
+                <input type="password" name="password" id="create-account-password" class="form-control validate" minlength="8" maxlength="20" pattern="^[a-zA-Z0-9]{8,20}$" placeholder="Password"
+                    aria-describedby="CreateAccountPasswordHelpBlock" required>
+                <small id="create-account-password-help-block" class="form-text text-muted mb-4">
                     At least 8 characters and 1 digit
                 </small>
 
@@ -25,7 +28,7 @@
 
                 <!-- Register -->
                 <p>
-                    Already got an account? <a href="{{ url_for('get_login') }}">Log in</a> to view or edit your RSVP.
+                    Already got an account? <a href="{{ url_for('login') }}">Log in</a> to view or edit your RSVP.
                 </p>
             </div>
     </div>
