--- a/templates/register.html
+++ b/templates/register.html
@@ -11,7 +11,7 @@
                     below.</p>
 
                 <!-- Name -->
-                <input type="name" name="name" id="create-account-name" class="form-control mb-4" placeholder="name" required>
+                <input type="name" name="name" id="create-account-name" class="form-control mb-4" placeholder="Name" required>
 
                 <!-- E-mail -->
                 <input type="email" name="email" id="create-account-email" class="form-control mb-4 validate" placeholder="E-mail" required>
