--- a/templates/base.html
+++ b/templates/base.html
@@ -62,7 +62,7 @@
                     </a>
                     <div class="dropdown-menu dropdown-menu-right dropdown-default"
                         aria-labelledby="navbarDropdownMenuLink-333">
-                        <a class="dropdown-item" href="{{ url_for('get_login') }}">Log In</a>
+                        <a class="dropdown-item" href="{{ url_for('login') }}">Log In</a>
                     </div>
                     </li>
                 </ul>
