--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,9 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
 
-    {% for user in users %}
-        {{ users.email }}<br>
-        {{ users.password }}<br>
-    {% endfor %}
+    <div class="row">
+        <div class="col s12 m8 offset-m2">
+            <div class="card-panel">
+                <h3 class="center-align light-blue-text text-darken-4">
+                    {{ name }}'s Profile
+                </h3>
+            </div>
+        </div>
+    </div>
 
 {% endblock %}
