--- a/templates/login.html
+++ b/templates/login.html
@@ -6,11 +6,11 @@
 
             <p class="h4 mb-4">Log in to edit your RSVP</p>
 
-            <!-- Email -->
-            <input type="email" name="email" id="login-email" class="form-control mb-4" placeholder="E-mail" required>
+            <!-- Username -->
+            <input type="username" name="username" id="login-username" class="form-control mb-4 validate" placeholder="Username" required>
 
             <!-- Password -->
-            <input type="password" name="password" id="login-password" class="form-control mb-4" placeholder="Password" required>
+            <input type="password" name="password" id="login-password" class="form-control mb-4 validate" placeholder="Password" required>
 
             <div class="d-flex justify-content-around">
                 <div>
