--- a/templates/register.html
+++ b/templates/register.html
@@ -10,8 +10,8 @@
                 <p>Attending as a group? You can RSVP for them too. Let us know who's attending by creating an account
                     below.</p>
 
-                <!-- Name -->
-                <input type="name" name="name" id="create-account-name" class="form-control mb-4" placeholder="Name" required>
+                <!-- Username -->
+                <input type="username" name="username" id="create-account-username" class="form-control mb-4 validate" placeholder="Username" required>
 
                 <!-- E-mail -->
                 <input type="email" name="email" id="create-account-email" class="form-control mb-4 validate" placeholder="E-mail" required>
