--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent-333">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('profile', name=session['user']) }}">Dates</a>
+                    <a class="nav-link" href="{{ url_for('profile', username=session['current_user']) }}">Dates</a>
                     </li>
                     <li class="nav-item">
                     <a class="nav-link" href="/#info">Info</a>
