Add Profile and Log Out links to navbar dropdown

--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent-333">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('profile', username=session['current_user']) }}">Dates</a>
+                    <a class="nav-link" href="#">Dates</a>
                     </li>
                     <li class="nav-item">
                     <a class="nav-link" href="/#info">Info</a>
@@ -63,6 +63,8 @@
                     <div class="dropdown-menu dropdown-menu-right dropdown-default"
                         aria-labelledby="navbarDropdownMenuLink-333">
                         <a class="dropdown-item" href="{{ url_for('login') }}">Log In</a>
+                        <a class="dropdown-item" href="#">Log Out</a>
+                        <a class="dropdown-item" href="{{ url_for('profile', username=session['current_user']) }}">Profile</a>
                     </div>
                     </li>
                 </ul>
