--- a/templates/base.html
+++ b/templates/base.html
@@ -62,9 +62,13 @@
                     </a>
                     <div class="dropdown-menu dropdown-menu-right dropdown-default"
                         aria-labelledby="navbarDropdownMenuLink-333">
-                        <a class="dropdown-item" href="{{ url_for('login') }}">Log In</a>
-                        <a class="dropdown-item" href="#">Log Out</a>
-                        <a class="dropdown-item" href="{{ url_for('profile', username=session['current_user']) }}">Profile</a>
+                        {% if session.current_user %}
+                            <a class="dropdown-item" href="{{ url_for('profile', username=session['current_user']) }}">View RSVP</a>
+                            <a class="dropdown-item" href="#">Manage RSVP</a>
+                            <a class="dropdown-item" href="{{ url_for('logout') }}">Log Out</a>
+                        {% else %}
+                            <a class="dropdown-item" href="{{ url_for('login') }}">Log In</a>
+                        {% endif %}
                     </div>
                     </li>
                 </ul>
