Revert register account form back

--- a/templates/register.html
+++ b/templates/register.html
@@ -1,163 +1,38 @@
 {% extends "base.html" %}
 {% block content %}
 
-<ul id="rsvp-signup">
-    <li id="personal" class="active">Create Account</li>
-    <li id="create-account">Guest Details</li>
-    <li id="food-options">Food Options</li>
-    <li id="review">Review</li>
-</ul>
+    <div class="row">
+        <form class="col-md-8 mx-auto text-center border border-light p-5" method="POST" action="{{ url_for('create_account') }}">
+            <div class="card-panel">
 
-<div>
-    {% with messages = get_flashed_messages() %}
-    {% if messages %}
-    <ul>
-        {% for message in messages %}
-        <li>{{ message }}</li>
-        {% endfor %}
-    </ul>
-    {% endif %}
-    {% endwith %}
-</div>
+                <p class="h4 mb-4">Create an account to register your RSVP</p>
 
-<div>
-    <form name="rsvpForm" id="rsvp-form" method="post" action="/register">
+                <p>Attending as a group? You can RSVP for them too. Let us know who's attending by creating an account
+                    below.</p>
 
-        <!-- Create Account -->
-        <div id="account-details">
-            <h3>Create an account to register your RSVP</h3>
+                <!-- Name -->
+                <input type="name" name="name" id="create-account-name" class="form-control mb-4" placeholder="Name" required>
 
-            <label>Username</label><span id="username-error" class="rsvp-signup-error"></span>
-            <div><input type="text" name="username" id="username" class="demoInputBox" /></div>
+                <!-- E-mail -->
+                <input type="email" name="email" id="create-account-email" class="form-control mb-4 validate" placeholder="E-mail" required>
 
-            <label>Email</label><span id="email-error" class="rsvp-signup-error"></span>
-            <div><input type="text" name="email" id="email" class="demoInputBox" /></div>
+                <!-- Password -->
+                <input type="password" name="password" id="create-account-password" class="form-control validate" minlength="8" 
+                    maxlength="20" pattern="^[a-zA-Z0-9]{8,20}$" placeholder="Password"
+                    aria-describedby="CreateAccountPasswordHelpBlock" required>
+                <small id="create-account-password-help-block" class="form-text text-muted mb-4">
+                    At least 8 characters and 1 digit
+                </small>
 
-            <label>Enter Password</label><span id="password-error" class="rsvp-signup-error"></span>
-            <div><input type="password" name="password" id="user-password" class="demoInputBox" /></div>
+                <!-- Sign up button -->
+                <button id="create-rsvp-button" class="btn my-4" type="submit">create my account</button>
 
-            <label>Re-enter Password</label><span id="confirm-password-error" class="rsvp-signup-error"></span>
-            <div><input type="password" name="confirm-password" id="confirm-password" class="demoInputBox" /></div>
-        </div>
-
-        <!-- Guest Details -->
-        <div id="guest-details" style="display:none;">
-            <h3>Guest Details</h3>
-
-            <label>What is the name of the guest attending?</label><span id="guest-name-error"
-                class="rsvp-signup-error"></span>
-            <input type="text" name="guest-name" id="guest-name" class="form-control mb-4 demoInputBox"
-                placeholder="Guest Name" required>
-
-            <p>
-                Which events will this guest be attending?
-            </p>
-
-            <div class="form-check">
-                <input class="form-check-input demoInputBox" type="checkbox" value="" id="flexCheckDefault">
-                <label class="form-check-label rsvp-signup-error" for="flexCheckDefault">
-                    Pre-meet - 7 May 2022, 1pm - 5pm
-                </label>
+                <!-- Register -->
+                <p>
+                    Already got an account? <a href="{{ url_for('login') }}">Log in</a> to view or edit your RSVP.
+                </p>
             </div>
-            <div class="form-check">
-                <input class="form-check-input demoInputBox" type="checkbox" value="" id="flexCheckDefault">
-                <label class="form-check-label rsvp-signup-error" for="flexCheckDefault">
-                    Wedding Day - 21 May 2022, 2pm - midnight
-                </label>
-            </div>
-        </div>
-
-        <!-- Food Options -->
-        <div id="food-options" style="display:none;">
-            <h3>Food Options</h3>
-
-            <p>
-                Please select your food options for the Wedding Day:
-            </p>
-
-            <h5>Starter</h5>
-            <p>
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-                    <label class="form-check-label" for="flexRadioDefault1">
-                        Default radio
-                    </label>
-                </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-                    <label class="form-check-label" for="flexRadioDefault1">
-                        Default radio
-                    </label>
-                </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-                    <label class="form-check-label" for="flexRadioDefault1">
-                        Default radio
-                    </label>
-                </div>
-            </p>
-
-            <h5>Main</h5>
-            <p>
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-                    <label class="form-check-label" for="flexRadioDefault1">
-                        Default radio
-                    </label>
-                </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-                    <label class="form-check-label" for="flexRadioDefault1">
-                        Default radio
-                    </label>
-                </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-                    <label class="form-check-label" for="flexRadioDefault1">
-                        Default radio
-                    </label>
-                </div>
-            </p>
-
-
-            <h5>Dessert</h5>
-            <p>
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-                    <label class="form-check-label" for="flexRadioDefault1">
-                        Default radio
-                    </label>
-                </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-                    <label class="form-check-label" for="flexRadioDefault1">
-                        Default radio
-                    </label>
-                </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-                    <label class="form-check-label" for="flexRadioDefault1">
-                        Default radio
-                    </label>
-                </div>
-            </p>
-
-            <h5>Please let us know if you have any dietary requirements or food allergies:</h5>
-            <input type="text" name="dietary-requirements" id="dietary-requirements" class="form-control mb-4"
-                placeholder="Type your answer here">
-        </div>
-
-        <!-- Review RSVP -->
-        <div id="review">
-            
-        </div>
-
-        <div>
-            <input class="btnAction" type="button" name="back" id="back" value="Back" style="display:none;">
-            <input class="btnAction" type="button" name="next" id="next" value="Next">
-            <input class="btnAction" type="submit" name="finish" id="finish" value="Finish" style="display:none;">
-        </div>
-    </form>
-</div>
+        </form>
+    </div>
 
 {% endblock %}
