--- a/templates/register.html
+++ b/templates/register.html
@@ -1,38 +1,39 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <div class="row">
-        <form class="col-md-8 mx-auto text-center border border-light p-5" method="POST" action="{{ url_for('create_account') }}">
-            <div class="card-panel">
+<div class="row">
+    <form class="col-md-8 mx-auto text-center border border-light p-5" method="POST" action="{{ url_for('create_account') }}">
+        <div class="card-panel">
 
-                <p class="h4 mb-4">Create an account to register your RSVP</p>
+            <p class="h4 mb-4">Create an account to register your RSVP</p>
 
-                <p>Attending as a group? You can RSVP for them too. Let us know who's attending by creating an account
-                    below.</p>
+            <p>Attending as a group? You can RSVP for them too. Let us know who's attending by creating an account
+                below.</p>
 
-                <!-- Name -->
-                <input type="name" name="name" id="create-account-name" class="form-control mb-4" placeholder="Name" required>
+            <!-- Name -->
+            <input type="username" name="username" id="create-account-name" class="form-control mb-4" placeholder="Name" required>
 
-                <!-- E-mail -->
-                <input type="email" name="email" id="create-account-email" class="form-control mb-4 validate" placeholder="E-mail" required>
+            <!-- E-mail -->
+            <input type="email" name="email" id="create-account-email" class="form-control mb-4 validate" placeholder="E-mail" required>
 
-                <!-- Password -->
-                <input type="password" name="password" id="create-account-password" class="form-control validate" minlength="8" 
-                    maxlength="20" pattern="^[a-zA-Z0-9]{8,20}$" placeholder="Password"
-                    aria-describedby="CreateAccountPasswordHelpBlock" required>
-                <small id="create-account-password-help-block" class="form-text text-muted mb-4">
-                    At least 8 characters and 1 digit
-                </small>
+            <!-- Password -->
+            <input type="password" name="password" id="create-account-password" class="form-control validate" minlength="8" 
+                maxlength="20" pattern="^[a-zA-Z0-9]{8,20}$" placeholder="Password"
+                aria-describedby="CreateAccountPasswordHelpBlock" required>
+            <small id="create-account-password-help-block" class="form-text text-muted mb-4">
+                At least 8 characters and 1 digit
+            </small>
 
-                <!-- Sign up button -->
-                <button id="create-rsvp-button" class="btn my-4" type="submit">create my account</button>
+            <!-- Sign up button -->
+            <button id="create-rsvp-button" class="btn my-4" type="submit">create my account</button>
 
-                <!-- Register -->
-                <p>
-                    Already got an account? <a href="{{ url_for('login') }}">Log in</a> to view or edit your RSVP.
-                </p>
-            </div>
-        </form>
-    </div>
+            <!-- Register -->
+            <p>
+                Already got an account? <a href="{{ url_for('login') }}">Log in</a> to view or edit your RSVP.
+            </p>
+        </div>
+    </form>
+</div>
+
 
 {% endblock %}
