--- a/templates/base.html
+++ b/templates/base.html
@@ -65,7 +65,7 @@
                     <div class="dropdown-menu dropdown-menu-right dropdown-default"
                         aria-labelledby="navbarDropdownMenuLink-333">
                         {% if session.current_user %}
-                            <a class="dropdown-item" href="{{ url_for('profile', username=session['current_user']) }}">View RSVP</a>
+                            <a class="dropdown-item" href="{{ url_for('view_rsvp', username=session['current_user']) }}">View RSVP</a>
                             <a class="dropdown-item" href="#">Manage RSVP</a>
                             <a class="dropdown-item" href="{{ url_for('logout') }}">Log Out</a>
                         {% else %}
