Add footer to base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -96,6 +96,51 @@
         {% endblock %}
     </main>
 
+    <!-- Footer -->
+<footer class="page-footer font-small teal pt-4">
+
+    <!-- Footer Text -->
+    <div class="container-fluid text-center text-md-left">
+  
+      <!-- Grid row -->
+      <div class="row text-center">
+        <!-- Grid column -->
+        <div class="col-md-12 mt-md-0">
+            <h5 class="font-weight-bold ">Need to get in touch?</h5>
+        </div>
+        <!-- Grid column -->
+        <div class="col-md-6 mt-md-0 mt-3">
+  
+          <!-- Content -->
+            <p>
+              <i class="fas fa-phone"></i> +44 (0)1234 56789
+            </p>
+  
+        </div>
+        <!-- Grid column -->
+  
+        <hr class="clearfix w-100 d-md-none pb-3">
+  
+        <!-- Grid column -->
+        <div class="col-md-6 mb-md-0 mb-3">
+  
+          <!-- Content -->
+          <p>
+            <i class="fas fa-envelope"></i> bizandchris@wedding.com
+          </p>
+  
+        </div>
+        <!-- Grid column -->
+  
+      </div>
+      <!-- Grid row -->
+  
+    </div>
+    <!-- Footer Text -->
+  
+  </footer>
+  <!-- Footer -->
+
     <!-- JQuery -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- Bootstrap tooltips -->
