--- a/templates/base.html
+++ b/templates/base.html
@@ -66,7 +66,7 @@
                         aria-labelledby="navbarDropdownMenuLink-333">
                         {% if session.current_user %}
                             <a class="dropdown-item" href="{{ url_for('view_rsvp', username=session['current_user']) }}">View RSVP</a>
-                            <a class="dropdown-item" href="#">Manage RSVP</a>
+                            <a class="dropdown-item" href="{{ url_for('add_guest', username=session['current_user']) }}">Add Guest</a>
                             <a class="dropdown-item" href="{{ url_for('logout') }}">Log Out</a>
                         {% else %}
                             <a class="dropdown-item" href="{{ url_for('login') }}">Log In</a>
