--- a/templates/base.html
+++ b/templates/base.html
@@ -64,9 +64,9 @@
                     </a>
                     <div class="dropdown-menu dropdown-menu-right dropdown-default"
                         aria-labelledby="navbarDropdownMenuLink-333">
-                        {% if session.current_user %}
-                            <a class="dropdown-item" href="{{ url_for('view_rsvp', username=session['current_user']) }}">View RSVP</a>
-                            <a class="dropdown-item" href="{{ url_for('add_guest', username=session['current_user']) }}">Add Guest</a>
+                        {% if session.user_id %}
+                            <a class="dropdown-item" href="{{ url_for('view_rsvp', user_id=session['user_id']) }}">View RSVP</a>
+                            <a class="dropdown-item" href="{{ url_for('add_guest', user_id=session['user_id']) }}">Add Guest</a>
                             <a class="dropdown-item" href="{{ url_for('logout') }}">Log Out</a>
                         {% else %}
                             <a class="dropdown-item" href="{{ url_for('login') }}">Log In</a>
