--- a/templates/add_guest.html
+++ b/templates/add_guest.html
@@ -39,7 +39,8 @@
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                             <label class="form-check-label" for="flexCheckDefault">
-                                Pre-meet - 7 May 2022, 1pm - 5pm
+                                Pre-meet - 7
+                                May 2022, 1pm - 5pm
                             </label>
                         </div>
                         <div class="form-check">
